doc/paper.tex: conform to -ize convention

--- a/doc/paper.tex
+++ b/doc/paper.tex
@@ -158,7 +158,7 @@ Higgs
          renormalization scales, which are connected by
          renormalization group equations forming a large set of
          coupled first-order differential equations. \\ {\em Solution method:}\/
-         Nested iterative algorithm and numerical minimisation of the
+         Nested iterative algorithm and numerical minimization of the
          Higgs potential.  \\ {\em Restrictions:} The couplings must
          remain perturbative at all scales between the highest and
          lowest boundary condition.  \fs~ assumes that all couplings
