doc/paper.tex: match firstly ... secondly ...

--- a/doc/paper.tex
+++ b/doc/paper.tex
@@ -213,7 +213,7 @@ test non-minimal realizations of supersymmetry.
 Recent experimental developments have also increased the relevancy of
 such a tool. From the recent $7$ TeV and $8$ TeV runs at the Large
 Hadron Collider (LHC) there have been two important developments.
-First low energy signatures expected from such models, such as the
+Firstly low energy signatures expected from such models, such as the
 classic jets plus missing transverse energy signature, have not been
 observed, substantially raising the lower limit on sparticle masses
 (see e.g.~\cite{Aad:2013wta,Chatrchyan:2014lfa}). No other signature
