doc/paper.tex: change capitalizations
See http://www.boost.org .

--- a/doc/paper.tex
+++ b/doc/paper.tex
@@ -316,7 +316,7 @@ combined to a complete spectrum generator, which solves the
 user-defined boundary value problem.  For this task \fs uses some
 parts of Softsusy \cite{Allanach:2001kg}, the very fast Eigen library
 \cite{eigen}, augmented by LAPACK, as well as the GNU scientific
-library and the BOOST library to create numerical routines which solve
+library and the Boost library to create numerical routines which solve
 the RGEs and boundary conditions simultaneously.  If a solution has
 been found the pole mass spectrum is eventually calculated using full
 one-loop self-energies (and leading two-loop Higgs self-energy
@@ -1169,7 +1169,7 @@ The $\Delta\alpha_i(\mu)$ are threshold corrections and read
 %
 where the sums on the right-hand sides run over all electrically and
 color charged fields absent from the Standard Model.  The constants
-$T_i$ are the dynkin indices of the representation of particle~$i$
+$T_i$ are the Dynkin indices of the representation of particle~$i$
 with respect to the gauge group, and $F_i$ are particle-type specific
 constants \cite{Hall:1980kf}
 %
