doc/paper.tex: trim optional trailing / from links

--- a/doc/paper.tex
+++ b/doc/paper.tex
@@ -436,9 +436,9 @@ necessary:
   \url{http://eigen.tuxfamily.org}
 \item Boost library, version 1.36.0 or higher
   \url{http://www.boost.org}
-\item GNU scientific library \url{http://www.gnu.org/software/gsl/}
-\item an implementation of LAPACK \url{http://www.netlib.org/lapack/}
-  such as ATLAS \url{http://math-atlas.sourceforge.net/} or
+\item GNU scientific library \url{http://www.gnu.org/software/gsl}
+\item an implementation of LAPACK \url{http://www.netlib.org/lapack}
+  such as ATLAS \url{http://math-atlas.sourceforge.net} or
   Intel Math Kernel Library \url{http://software.intel.com/intel-mkl}
 \end{itemize}
 %
@@ -446,14 +446,14 @@ Optional:
 %
 \begin{itemize}
 \item Looptools, version 2.8 or higher
-  \url{http://www.feynarts.de/looptools/}
+  \url{http://www.feynarts.de/looptools}
 \end{itemize}
 
 \subsection{Downloading \fs and generating a first spectrum generator}
 \label{sec:quick-start-cmssm}
 
 \fs can be downloaded as a gzipped tar file from
-\url{http://flexiblesusy.hepforge.org/}.  To download and install
+\url{http://flexiblesusy.hepforge.org}.  To download and install
 version 1.0.0 run:
 %
 \begin{lstlisting}[language=bash]
