doc/paper.tex: trim optional trailing / from argument to cd

--- a/doc/paper.tex
+++ b/doc/paper.tex
@@ -459,7 +459,7 @@ version 1.0.0 run:
 \begin{lstlisting}[language=bash]
 $ wget https://www.hepforge.org/archive/flexiblesusy/FlexibleSUSY-1.0.0.tar.gz
 $ tar -xf FlexibleSUSY-1.0.0.tar.gz
-$ cd FlexibleSUSY-1.0.0/
+$ cd FlexibleSUSY-1.0.0
 \end{lstlisting}%% $
 %
 A CMSSM spectrum generator can be created with the following three
