added key words 'renormalization group equations' as per Jae-hyeon suggestion.

--- a/doc/paper.tex
+++ b/doc/paper.tex
@@ -136,7 +136,8 @@ TU Dresden, Zellescher Weg 19, 01069 Dresden, Germany}
 \begin{keyword}
 sparticle, 
 supersymmetry, 
-Higgs
+Higgs,
+renormalization group equations
 \PACS 12.60.Jv
 \PACS 14.80.Ly
 \end{keyword}
