removed reference to FlexibleSUSY bugs in section 8 as per Jae-hyeon suggestion.

--- a/doc/paper.tex
+++ b/doc/paper.tex
@@ -2810,7 +2810,7 @@ precision.  We also compared the overall pole mass spectrum after the
 full fixed-point iteration has finished, and found the spectra to
 agree at the sub-permille level.  Analytic tests of the $R$-symmetric
 low-energy model, MRSSM, were done by Philip Diessner and several bugs
-in \fs and SARAH were identified and fixed.
+in SARAH were identified and fixed.
 
 \fs generated NUH \ESSM has also been compared against a handwritten
 spectrum generator for a constrained version of the \ESSM
@@ -2819,7 +2819,7 @@ directly in unit tests and were found to match.  The handwritten code
 doesn't include full one loop self energies or tadpoles so tests on
 these were not carried.  Although the generators assume different
 constraints they could be compared by using the output of the
-CE$_6$SSM as input to \fs and the spectra were found to be in
+CE$_6$SSM generator as an input to \fs and the spectra were found to be in
 reasonable agreement, given the different levels of precision.
 
 We also compared the run-time of \fs against SPheno, Softsusy and the
