Changed obvious instance of FlexibleSUSY.m to FlexibleSUSY.m.in. Thinking about how to calrify distinction elsewhere.

--- a/doc/paper.tex
+++ b/doc/paper.tex
@@ -558,7 +558,7 @@ customization can be found in Sections
 the NMSSM.  The NMSSM variant above unifies all soft-breaking
 trilinear scalar couplings at the GUT scale.  In order to relax this
 constraint and use a separate value for $A_\lambda$ at the GUT scale
-one can edit the model file \code{models/NMSSM/FlexibleSUSY.m} and
+one can edit the model file \code{model_files/NMSSM/FlexibleSUSY.m.in} and
 change the lines
 %
 \begin{lstlisting}[language=Mathematica]
