intergenerational -> inter-generational

--- a/doc/paper.tex
+++ b/doc/paper.tex
@@ -2529,7 +2529,7 @@ from a non-trivial flavour structure of \code{Yv}
 \cite{Borzumati:1986qx}.
 This leads in turn to the slepton mixing
 matrices, \code{ZE} and \code{ZV},
-which contain intergenerational mixings apart from the
+which contain inter-generational mixings apart from the
 generic left-right mixings.
 
 \subsubsection{Integrating custom-built C++ components}
