finished full spell check.

--- a/doc/paper.tex
+++ b/doc/paper.tex
@@ -2602,7 +2602,7 @@ This already completes the amendment of the $g_3$ $\beta$-function.
 
 The next step is to write a substitute for
 the low-energy boundary condition class.
-It must be declared as a descendent of \code{Constraint<Two_scale>}
+It must be declared as a descendant of \code{Constraint<Two_scale>}
 whose function is described in \secref{sec:boundary-conditions}:
 % MSSMcbs_two_scale_low_scale_constraint.hpp
 \begin{numlstlisting}
