explain meaning of vT in Eq. (15)

--- a/doc/paper.tex
+++ b/doc/paper.tex
@@ -1209,17 +1209,19 @@ example, it yields
   \theta_{W,\text{susy}}^{\text{\DRbar}}(M_Z) &= \arcsin\sqrt{1
     -
     \left(\frac{M_{W,\text{susy}}^{\text{\DRbar}}(M_Z)}{M_{Z,\text{susy}}^{\text{\DRbar}}(M_Z)}\right)^2}
-  ,
+  .
 \end{align}
 %
-while in models with Higgs triplets the relation looks like
+In a model with a Higgs triplet the relation looks like
 %
 \begin{align}
   \theta_{W,\text{susy}}^{\text{\DRbar}}(M_Z) &= \arcsin\sqrt{1 -
     \frac{\left(M_{W,\text{susy}}^{\text{\DRbar}}(M_Z)\right)^2 -
-      g_2^2v_T^2}{\left(M_{Z,\text{susy}}^{\text{\DRbar}}(M_Z)\right)^2}}.
+      g_2^2v_T^2}{\left(M_{Z,\text{susy}}^{\text{\DRbar}}(M_Z)\right)^2}},
 \end{align}
 %
+where $v_T$ is the vacuum expectation value of the scalar Higgs
+triplet field.
 The running \DRbar\ $W$ and $Z$ boson masses are calculated in each
 iteration from the corresponding pole masses as
 %
