--- a/doc/paper.tex
+++ b/doc/paper.tex
@@ -610,16 +610,16 @@ already is distributed with a lot of predefined models, which can be used with
 The model boundary conditions are defined in the \fs model file
 \code{FlexibleSUSY.m}, which has to be located in the model directory
 \code{models/<model>/}. To add this the user should create a
-\code{FlexibleSUSY.m} in the directory \code{model_files/<model>/}.
-When the \code{./createmodel} command is used Flexible SUSY will create the
-FlexibleSUSY.m file from the FlexibleSUSY.m.in file found in the
+\code{FlexibleSUSY.m.in} in the directory \code{model_files/<model>/}.
+When the \code{./createmodel} command is used \fs will create the
+\code{FlexibleSUSY.m} file from the \code{FlexibleSUSY.m.in} file found in the
 directory in \code{model_files} with the name specified by the
 \code{--model-file=<model-file-name>} option. If no such option is
 given then it will use the directory matching the option
-\code{--name=<model>}.  In either case the the FlexibleSUSY.m file
+\code{--name=<model>}.  In either case the the \code{FlexibleSUSY.m} file
 which is created is then automatically placed in the directory
 \code{models/<model>/} by \fs. Note that many example model
-files can already be found in \code{model_files/<model>/}.
+files can already be found in \code{model_files/}.
 
 In the following it is explained how the
 boundary conditions can be defined on the basis of the CMSSM.  The
@@ -710,7 +710,7 @@ LowPoleMassPrecision     = {};
 \end{lstlisting}
 %
 The first line \code{FSModelName = "@CLASSNAME@";} will be replaced
-with \code{FSModelName = "<model>";} in the generated FlexibleSUSY.m
+with \code{FSModelName = "<model>";} in the generated \code{FlexibleSUSY.m}
 file where \code{<model>} is given by the option \code{--name=<model>} for
 command \code{./createmodel}.  So the variable \code{FSModelName} then
 contains the name of the \fs model.
