FS is a "Mathematica and C++ package"

--- a/doc/paper.tex
+++ b/doc/paper.tex
@@ -108,7 +108,7 @@ Universitat de Val\`{e}ncia-CSIC,
 TU Dresden, Zellescher Weg 19, 01069 Dresden, Germany}
    
   \begin{abstract}
-    We introduce \fs, a \mathematica package, which generates a fast,
+    We introduce \fs, a \mathematica and C++ package, which generates a fast,
     precise C++ spectrum generator for any SUSY model specified by the
     user.  The generated code is designed with both speed and
     modularity in mind, making it easy to adapt and extend with new
@@ -237,7 +237,7 @@ which can be generated from
 \fs provides a much needed alternative to this with a structure which
 has been freshly designed to accommodate as general range of models as
 possible and to be easily adaptable to changing goals and new
-ideas. \fs is a \mathematica package which uses \sarah to create a
+ideas. \fs is a \mathematica and C++ package which uses \sarah to create a
 fast, modular C++ spectrum generator for a user specified SUSY model.
 The generated code structure is designed to be as flexible as possible
 to accommodate different types of extensions and due to its modular
@@ -289,7 +289,7 @@ The so defined boundary value problem must be solved numerically until
 a set of model parameters has been found consistent with all
 user-supplied boundary conditions.
 
-\fs is a \mathematica package designed to create a fast and easily
+\fs is a \mathematica and C++ package designed to create a fast and easily
 adaptable spectrum generator in C++ for any SUSY model.
 The user specifies the model by giving the
 superfield content, superpotential, gauge symmetries and mass mixings
@@ -2843,7 +2843,7 @@ can be found in \secref{sec:run-time comparison}.
 
 \section{Conclusions}
 
-We have presented \fs, a Mathematica package, which generates fast and
+We have presented \fs, a Mathematica and C++ package, which generates fast and
 modular spectrum generators for any user specified SUSY model.  \fs is
 distributed with a large number of predefined models for the CMSSM,
 NMSSM, USSM, \ESSM, MRSSM etc., which can be generated immediately
