correcting citations for the two-loop tadpoles in the MSSM and NMSSM

--- a/doc/paper.tex
+++ b/doc/paper.tex
@@ -1413,12 +1413,11 @@ parameters $\mu$ and $B\mu$ until the Eqs.\
 
 If higher accuracy is required additional routines with higher order
 corrections can be added by setting \code{UseHiggs2LoopMSSM = True}
-in the model file.  For example in the MSSM by default \fs adds two
+in the model file.  For example in the MSSM by default \fs adds
 two-loop Higgs FORTRAN routines supplied by P.~Slavich from
-\cite{Degrassi:2001yf,Brignole:2001jy,Dedes:2002dy,Brignole:2002bz,Dedes:2003km}
-to add two loop corrections of $\oatas$, $\oabas$, $\oatq$,
-$\oabq$, $\oatauq$ and $\oatab$.  In the NMSSM
-contributions of the order $\oatas$, $\oabas$ \cite{Degrassi:2009yq}
+\cite{Dedes:2002dy,Dedes:2003km}
+to add two-loop corrections of $\oatas$, $\oabas$, $\oatq$,
+$\oabq$, $\oatauq$ and $\oatab$.  In the NMSSM the same contributions
 can be added by setting \code{UseHiggs2LoopNMSSM = True} in the model
 file.
 
