explain superscript T and mention SLHA-2 convention

--- a/doc/paper.tex
+++ b/doc/paper.tex
@@ -1253,14 +1253,16 @@ calculated automatically if the user has set $y_f$ to the value
 the CMSSM model file in \secref{sec:modfile}.  In this case \fs
 expresses the Yukawa couplings in terms of the fermion mass matrices
 $m_u$, $m_d$, $m_e$.  In the MSSM, for example, these relations read
+in the SLHA convention \cite{Allanach:2008qq}
 %
 \begin{align}
   y_u^{\text{\DRbar}}(M_Z) &= \frac{\sqrt{2} m_{u}^T}{v_u} , &
   y_d^{\text{\DRbar}}(M_Z) &= \frac{\sqrt{2} m_{d}^T}{v_d} , &
-  y_e^{\text{\DRbar}}(M_Z) &= \frac{\sqrt{2} m_{e}^T}{v_d}.
+  y_e^{\text{\DRbar}}(M_Z) &= \frac{\sqrt{2} m_{e}^T}{v_d} ,
 \end{align}
 %
-The fermion mass matrices are composed as
+where the superscript $T$ means transposition of a matrix.  The
+fermion mass matrices are composed as
 %
 \begin{align}
   m_u = \diag(m_{u}^{\userinput}, m_{c}^{\userinput}, m_{t,\text{susy}}^{\text{\DRbar}}(M_Z)) ,\\
