adding references to publication on arXiv with temporary arXiv number

--- a/README
+++ b/README
@@ -10,6 +10,7 @@ Homepage:                https://flexiblesusy.hepforge.org
 Mailing list:            flexiblesusy@projects.hepforge.org
 Source code repository:  https://github.com/FlexibleSUSY
 Bug reports:             https://github.com/FlexibleSUSY/FlexibleSUSY/issues
+References:              arxiv:1406:XXXX[hep-ph]
 
 
 Requirements
