--- a/doc/paper.tex
+++ b/doc/paper.tex
@@ -190,24 +190,27 @@ theory.
 
 Detailed phenomenological studies have been carried out for scenarios
 within the minimal supersymmetric standard model (MSSM).  Such work
-has been greatly aided by public spectrum generators for
-MSSM \cite{Allanach:2001kg,Porod:2003um,Djouadi:2002ze,Baer:1993ae,Chowdhury:2011zr},
+has been greatly aided by public spectrum generators for MSSM
+\cite{Allanach:2001kg,Porod:2003um,Djouadi:2002ze,Baer:1993ae,Chowdhury:2011zr},
 allowing fast and reliable exploration of the sparticle spectrum,
 mixings and couplings, which can be obtained from particular choices
 of breaking mechanism inspired boundary conditions and specified
 parameters. Beyond the MSSM there are also two public spectrum
 generators \cite{Ellwanger:2006rn,Allanach:2013kza} for the next to
-minimal supersymmetric standard model (NMSSM) \cite{NMSSM}.
+minimal supersymmetric standard model (NMSSM) \cite{NMSSM} (or for recent
+reviews see \cite{Ellwanger:2009dp,Maniatis:2009re}).
 
 None of the fundamental motivations of supersymmetry require
 minimality, and specific alternatives to (or extensions of) the MSSM
-are, for example, motivated by the $\mu$-problem of the
-MSSM \cite{Kim:1983dt}; explaining the family structure (see e.g.~\cite{King:2014nza}) or for successful baryogenesis or leptogenesis
-(see e.g.~\cite{King:2008qb}). However constructing specialized tools
-to study all relevant models would require an enormous amount of work.
-So general tools which can automate this process and produce fast and
-reliable programs can greatly enhance our ability to understand and
-test non-minimal realizations of supersymmetry.
+are, for example, motivated by the $\mu$-problem of the MSSM
+\cite{Kim:1983dt}; explaining the family structure (see
+e.g.~\cite{King:2014nza}) or for successful baryogenesis or
+leptogenesis (see e.g.~\cite{King:2008qb}). However constructing
+specialized tools to study all relevant models would require an
+enormous amount of work.  So general tools which can automate this
+process and produce fast and reliable programs can greatly enhance our
+ability to understand and test non-minimal realizations of
+supersymmetry.
 
 Recent experimental developments have also increased the relevancy of
 such a tool. From the recent $7$ TeV and $8$ TeV runs at the Large
@@ -225,14 +228,17 @@ significantly heavier than both the direct collider limits and
 indirect limits that appears in constrained models from the
 significantly higher limits on first and second generation squarks.
 
-These motivate both exploring non-minimal SUSY models which ameliorate
-the naturalness problems by, for example, raising the tree level Higgs
-mass and models developed with a fresh perspective based on other
-considerations.  In both cases exploration of such models can be aided
-if it is possible to quickly create a fast spectrum generator.
-Currently there is only one option for this, a SPheno-like FORTRAN code
-which can be generated from
-\sarah \cite{Staub:2010ty,Staub:2009bi,Staub:2010jh,Staub:2012pb,Staub:2013tta}.
+These developments motivate the exploration of non-minimal SUSY models
+which ameliorate the naturalness problems, as can happen in the \ESSM
+\cite{King:2005jy,King:2005my,King:2007uj,Athron:2010zz} and USSM
+\cite{Fayet:1977yc,Suematsu:1994qm,Cvetic:1995rj,deCarlos:1997yv,Cvetic:1997ky,Demir:1998dk,Langacker:1998tc,Erler:2002pr,Choi:2006fz,Ham:2007wc,Langacker:2008yv,Ham:2008xf,Kalinowski:2008iq}
+by raising the tree level Higgs mass. At the same time they can also
+motivates models that are developed with a fresh perspective, based on
+other considerations.  In both cases exploration of such models can be
+aided if it is possible to quickly create a fast spectrum generator.
+Currently there is only one option for this, a SPheno-like FORTRAN
+code which can be generated from \sarah
+\cite{Staub:2010ty,Staub:2009bi,Staub:2010jh,Staub:2012pb,Staub:2013tta}.
 
 \fs provides a much needed alternative to this with a structure which
 has been freshly designed to accommodate as general range of models as
@@ -530,12 +536,10 @@ Block MASS
 \label{sec:quick-start-alternative-models}
 
 \fs already comes with plenty of predefined models: the CMSSM (simply
-called \code{MSSM}), the $Z_3$-symmetric NMSSM (called \code{NMSSM})
-\cite{Ellwanger:2009dp}, $Z_3$-violating NMSSM (\code{SMSSM})
-\cite{Ellwanger:2009dp}, the USSM (\code{UMSSM})
-\cite{Fayet:1977yc,Cvetic:1997ky,Erler:2002pr}, the NUHM-\ESSM
-(\code{E6SSM}) \cite{King:2005jy,Athron:2007en}, the right-handed
-neutrino extended MSSM (\code{MSSMRHN}), the NUHM-MSSM
+called \code{MSSM}), the NMSSM \cite{NMSSM} in it's $Z_3$-symmetric form (called \code{NMSSM}), $Z_3$-violating NMSSM (\code{SMSSM}), the USSM (\code{UMSSM})
+\cite{Fayet:1977yc,Suematsu:1994qm,Cvetic:1995rj,deCarlos:1997yv,Cvetic:1997ky,Demir:1998dk,Langacker:1998tc,Erler:2002pr,Choi:2006fz,Ham:2007wc,Langacker:2008yv,Ham:2008xf,Kalinowski:2008iq},
+the NUHM-\ESSM (\code{E6SSM}) \cite{Athron:2007en}, the
+right-handed neutrino extended MSSM (\code{MSSMRHN}), the NUHM-MSSM
 (\code{NUHMSSM}) and the $R$-symmetric MSSM (\code{MRSSM})
 \cite{Kribs:2007ac}.  See the content of \code{model_files/} for all
 predefined model files.  For all these models spectrum generators can
@@ -2832,13 +2836,14 @@ in SARAH were identified and fixed.
 
 \fs generated NUH \ESSM has also been compared against a handwritten
 spectrum generator for a constrained version of the \ESSM
-\cite{Athron:2009bs,Athron:2012pw}.  The RGEs could be compared
-directly in unit tests and were found to match.  The handwritten code
-doesn't include full one loop self energies or tadpoles so tests on
-these were not carried.  Although the generators assume different
-constraints they could be compared by using the output of the
-CE$_6$SSM generator as an input to \fs and the spectra were found to be in
-reasonable agreement, given the different levels of precision.
+\cite{Athron:2009ue, Athron:2009bs, Athron:2011wu, Athron:2012sq,
+  Athron:2012pw, Athron:2013ipa}.  The RGEs could be compared directly
+in unit tests and were found to match.  The handwritten code doesn't
+include full one loop self energies or tadpoles so tests on these were
+not carried.  Although the generators assume different constraints
+they could be compared by using the output of the CE$_6$SSM generator
+as an input to \fs and the spectra were found to be in reasonable
+agreement, given the different levels of precision.
 
 We also compared the run-time of \fs against SPheno, Softsusy and the
 SARAH generated MSSM spectrum generator SPhenoMSSM.  The test results
@@ -3158,6 +3163,24 @@ Pandita, Z. Phys. C \textbf{59} (1993) 575; T. Elliott, S.F. King and P.L.
 White, Phys. Rev. D {\bf 49} (1994) 2435; S.F. King and P.L. White, Phys. Rev. D
 \textbf{52} (1995) 4183;  F.~Franke and H.~Fraas, Int.\ J.\ Mod.\ Phys.\  A {\bf
 12} (1997) 479.   D.~J.~Miller, R.~Nevzorov and P.~M.~Zerwas,  Nucl.\ Phys.\ B {\bf 681}, 3 (2004) [hep-ph/0304049].
+%\cite{Ellwanger:2009dp}
+\bibitem{Ellwanger:2009dp} 
+  U.~Ellwanger, C.~Hugonie and A.~M.~Teixeira,
+  %``The Next-to-Minimal Supersymmetric Standard Model,''
+  Phys.\ Rept.\  {\bf 496}, 1 (2010)
+  [arXiv:0910.1785 [hep-ph]].
+  %%CITATION = ARXIV:0910.1785;%%
+  %327 citations counted in INSPIRE as of 21 Sep 2013
+%\cite{Maniatis:2009re}
+\bibitem{Maniatis:2009re} 
+  M.~Maniatis,
+  %``The Next-to-Minimal Supersymmetric extension of the Standard Model reviewed,''
+  Int.\ J.\ Mod.\ Phys.\ A {\bf 25}, 3505 (2010)
+  [arXiv:0906.0777 [hep-ph]].
+  %%CITATION = ARXIV:0906.0777;%%
+  %160 citations counted in INSPIRE as of 09 Jun 2014
+
+
 %\cite{Kim:1983dt}
 \bibitem{Kim:1983dt} 
   J.~E.~Kim and H.~P.~Nilles,
@@ -3211,6 +3234,161 @@ White, Phys. Rev. D {\bf 49} (1994) 2435; S.F. King and P.L. White, Phys. Rev. D
   %%CITATION = ARXIV:1202.1488;%%
   %592 citations counted in INSPIRE as of 24 Apr 2014
 %\cite{Chatrchyan:2014lfa}
+
+%\cite{King:2005jy}
+\bibitem{King:2005jy} 
+  S.~F.~King, S.~Moretti and R.~Nevzorov,
+  %``Theory and phenomenology of an exceptional supersymmetric standard model,''
+  Phys.\ Rev.\ D {\bf 73}, 035009 (2006)
+  [hep-ph/0510419].
+  %%CITATION = HEP-PH/0510419;%%
+  %130 citations counted in INSPIRE as of 03 Nov 2013
+
+%\cite{King:2005my}
+\bibitem{King:2005my} 
+  S.~F.~King, S.~Moretti and R.~Nevzorov,
+  %``Exceptional supersymmetric standard model,''
+  Phys.\ Lett.\ B {\bf 634}, 278 (2006)
+  [hep-ph/0511256].
+  %%CITATION = HEP-PH/0511256;%%
+  %90 citations counted in INSPIRE as of 09 Jun 2014
+
+%\cite{King:2007uj}
+\bibitem{King:2007uj} 
+  S.~F.~King, S.~Moretti and R.~Nevzorov,
+  %``Gauge coupling unification in the exceptional supersymmetric standard model,''
+  Phys.\ Lett.\ B {\bf 650}, 57 (2007)
+  [hep-ph/0701064].
+  %%CITATION = HEP-PH/0701064;%%
+  %46 citations counted in INSPIRE as of 09 Jun 2014
+
+%\cite{Athron:2010zz}
+\bibitem{Athron:2010zz} 
+  P.~Athron, J.~P.~Hall, R.~Howl, S.~F.~King, D.~J.~Miller, S.~Moretti and R.~Nevzorov,
+  %``Aspects of the exceptional supersymmetric standard model,''
+  Nucl.\ Phys.\ Proc.\ Suppl.\  {\bf 200-202}, 120 (2010).
+  %%CITATION = NUPHZ,200-202,120;%%
+  %5 citations counted in INSPIRE as of 09 Jun 2014
+
+%\cite{Fayet:1977yc}
+\bibitem{Fayet:1977yc}
+  P.~Fayet,
+  %``Spontaneously Broken Supersymmetric Theories of Weak, Electromagnetic and Strong Interactions,''
+  Phys.\ Lett.\ B {\bf 69} (1977) 489.
+  %%CITATION = PHLTA,B69,489;%%
+  %817 citations counted in INSPIRE as of 04 Jun 2014
+%\cite{deCarlos:1997yv}
+%\cite{Suematsu:1994qm}
+\bibitem{Suematsu:1994qm} 
+  D.~Suematsu and Y.~Yamagishi,
+  %``Radiative symmetry breaking in a supersymmetric model with an extra U(1),''
+  Int.\ J.\ Mod.\ Phys.\ A {\bf 10}, 4521 (1995)
+  [hep-ph/9411239].
+  %%CITATION = HEP-PH/9411239;%%
+  %116 citations counted in INSPIRE as of 09 Jun 2014
+
+  %\cite{Cvetic:1995rj}
+\bibitem{Cvetic:1995rj} 
+  M.~Cvetic and P.~Langacker,
+  %``Implications of Abelian extended gauge structures from string models,''
+  Phys.\ Rev.\ D {\bf 54}, 3570 (1996)
+  [hep-ph/9511378].
+  %%CITATION = HEP-PH/9511378;%%
+  %207 citations counted in INSPIRE as of 09 Jun 2014
+
+
+\bibitem{deCarlos:1997yv} 
+  B.~de Carlos and J.~R.~Espinosa,
+  %``Cold dark matter candidate in a class of supersymmetric models with an extra U(1),''
+  Phys.\ Lett.\ B {\bf 407}, 12 (1997)
+  [hep-ph/9705315].
+  %%CITATION = HEP-PH/9705315;%%
+  %51 citations counted in INSPIRE as of 09 Jun 2014
+%\cite{Cvetic:1997ky}
+\bibitem{Cvetic:1997ky}
+  M.~Cvetic, D.~A.~Demir, J.~R.~Espinosa, L.~L.~Everett and P.~Langacker,
+  %``Electroweak breaking and the mu problem in supergravity models with an additional U(1),''
+  Phys.\ Rev.\ D {\bf 56} (1997) 2861
+   [Erratum-ibid.\ D {\bf 58} (1998) 119905]
+  [hep-ph/9703317].
+  %%CITATION = HEP-PH/9703317;%%
+  %237 citations counted in INSPIRE as of 04 Jun 2014
+
+%\cite{Demir:1998dk}
+\bibitem{Demir:1998dk} 
+  D.~A.~Demir and N.~K.~Pak,
+  %``One loop effects in supergravity models with an additional U(1),''
+  Phys.\ Rev.\ D {\bf 57}, 6609 (1998)
+  [hep-ph/9809357].
+  %%CITATION = HEP-PH/9809357;%%
+  %19 citations counted in INSPIRE as of 09 Jun 2014
+
+%\cite{Langacker:1998tc}
+\bibitem{Langacker:1998tc} 
+  P.~Langacker and J.~Wang,
+  %``U(1)-prime symmetry breaking in supersymmetric E(6) models,''
+  Phys.\ Rev.\ D {\bf 58}, 115010 (1998)
+  [hep-ph/9804428].
+  %%CITATION = HEP-PH/9804428;%%
+  %108 citations counted in INSPIRE as of 09 Jun 2014
+
+%\cite{Erler:2002pr}
+\bibitem{Erler:2002pr}
+  J.~Erler, P.~Langacker and T.~-j.~Li,
+  %``The $Z$ - $Z^\prime$ mass hierarchy in a supersymmetric model with a secluded U(1) -prime breaking sector,''
+  Phys.\ Rev.\ D {\bf 66} (2002) 015002
+  [hep-ph/0205001].
+  %%CITATION = HEP-PH/0205001;%%
+  %84 citations counted in INSPIRE as of 04 Jun 2014
+
+%\cite{Choi:2006fz}
+\bibitem{Choi:2006fz} 
+  S.~Y.~Choi, H.~E.~Haber, J.~Kalinowski and P.~M.~Zerwas,
+  %``The Neutralino sector in the U(1)-extended supersymmetric standard model,''
+  Nucl.\ Phys.\ B {\bf 778}, 85 (2007)
+  [hep-ph/0612218].
+  %%CITATION = HEP-PH/0612218;%%
+  %43 citations counted in INSPIRE as of 09 Jun 2014
+
+%\cite{Ham:2007wc}
+\bibitem{Ham:2007wc} 
+  S.~W.~Ham and S.~K.~OH,
+  %``Electroweak phase transition in MSSM with U(1)-prime in explicit CP violation scenario,''
+  Phys.\ Rev.\ D {\bf 76}, 095018 (2007)
+  [arXiv:0708.1785 [hep-ph]].
+  %%CITATION = ARXIV:0708.1785;%%
+  %20 citations counted in INSPIRE as of 09 Jun 2014
+
+%\cite{Langacker:2008yv}
+\bibitem{Langacker:2008yv} 
+  P.~Langacker,
+  %``The Physics of Heavy $Z^\prime$ Gauge Bosons,''
+  Rev.\ Mod.\ Phys.\  {\bf 81}, 1199 (2009)
+  [arXiv:0801.1345 [hep-ph]].
+  %%CITATION = ARXIV:0801.1345;%%
+  %519 citations counted in INSPIRE as of 09 Jun 2014
+
+%\cite{Ham:2008xf}
+\bibitem{Ham:2008xf} 
+  S.~W.~Ham, T.~Hur, P.~Ko and S.~K.~Oh,
+  %``Neutral scalar Higgs bosons in the USSM at the LHC,''
+  J.\ Phys.\ G {\bf 35}, 095007 (2008)
+  [arXiv:0801.2361 [hep-ph]].
+  %%CITATION = ARXIV:0801.2361;%%
+  %10 citations counted in INSPIRE as of 09 Jun 2014
+
+
+%\cite{Kalinowski:2008iq}
+\bibitem{Kalinowski:2008iq} 
+  J.~Kalinowski, S.~F.~King and J.~P.~Roberts,
+  %``Neutralino Dark Matter in the USSM,''
+  JHEP {\bf 0901}, 066 (2009)
+  [arXiv:0811.2204 [hep-ph]].
+  %%CITATION = ARXIV:0811.2204;%%
+  %30 citations counted in INSPIRE as of 09 Jun 2014
+
+
+
  %\cite{Staub:2010ty}
 \bibitem{Staub:2010ty} 
   F.~Staub, W.~Porod and B.~Herrmann,
@@ -3331,50 +3509,7 @@ White, Phys. Rev. D {\bf 49} (1994) 2435; S.F. King and P.L. White, Phys. Rev. D
   %%CITATION = ARXIV:0801.0045;%%
   %177 citations counted in INSPIRE as of 21 Sep 2013
 
-%\cite{Ellwanger:2009dp}
-\bibitem{Ellwanger:2009dp} 
-  U.~Ellwanger, C.~Hugonie and A.~M.~Teixeira,
-  %``The Next-to-Minimal Supersymmetric Standard Model,''
-  Phys.\ Rept.\  {\bf 496}, 1 (2010)
-  [arXiv:0910.1785 [hep-ph]].
-  %%CITATION = ARXIV:0910.1785;%%
-  %327 citations counted in INSPIRE as of 21 Sep 2013
 
-%\cite{Fayet:1977yc}
-\bibitem{Fayet:1977yc}
-  P.~Fayet,
-  %``Spontaneously Broken Supersymmetric Theories of Weak, Electromagnetic and Strong Interactions,''
-  Phys.\ Lett.\ B {\bf 69} (1977) 489.
-  %%CITATION = PHLTA,B69,489;%%
-  %817 citations counted in INSPIRE as of 04 Jun 2014
-
-%\cite{Cvetic:1997ky}
-\bibitem{Cvetic:1997ky}
-  M.~Cvetic, D.~A.~Demir, J.~R.~Espinosa, L.~L.~Everett and P.~Langacker,
-  %``Electroweak breaking and the mu problem in supergravity models with an additional U(1),''
-  Phys.\ Rev.\ D {\bf 56} (1997) 2861
-   [Erratum-ibid.\ D {\bf 58} (1998) 119905]
-  [hep-ph/9703317].
-  %%CITATION = HEP-PH/9703317;%%
-  %237 citations counted in INSPIRE as of 04 Jun 2014
-
-%\cite{Erler:2002pr}
-\bibitem{Erler:2002pr}
-  J.~Erler, P.~Langacker and T.~-j.~Li,
-  %``The $Z$ - $Z^\prime$ mass hierarchy in a supersymmetric model with a secluded U(1) -prime breaking sector,''
-  Phys.\ Rev.\ D {\bf 66} (2002) 015002
-  [hep-ph/0205001].
-  %%CITATION = HEP-PH/0205001;%%
-  %84 citations counted in INSPIRE as of 04 Jun 2014
-
-%\cite{King:2005jy}
-\bibitem{King:2005jy} 
-  S.~F.~King, S.~Moretti and R.~Nevzorov,
-  %``Theory and phenomenology of an exceptional supersymmetric standard model,''
-  Phys.\ Rev.\ D {\bf 73}, 035009 (2006)
-  [hep-ph/0510419].
-  %%CITATION = HEP-PH/0510419;%%
-  %130 citations counted in INSPIRE as of 03 Nov 2013
 
 %\cite{Athron:2007en}
 \bibitem{Athron:2007en}
@@ -3384,6 +3519,8 @@ White, Phys. Rev. D {\bf 49} (1994) 2435; S.F. King and P.L. White, Phys. Rev. D
   [arXiv:0708.3248 [hep-ph]].
   %%CITATION = ARXIV:0708.3248;%%
   %2 citations counted in INSPIRE as of 04 Jun 2014
+
+
 
 %\cite{Kribs:2007ac}
 \bibitem{Kribs:2007ac}
@@ -3669,6 +3806,18 @@ Large Muon- and electron-Number Nonconservation in Supergravity Theories,}
   %%CITATION = HEP-PH/0509048;%%
   %27 citations counted in INSPIRE as of 05 Jun 2014
 
+
+
+%\cite{Athron:2009ue}
+\bibitem{Athron:2009ue} 
+  P.~Athron, S.~F.~King, D.~J.~Miller, S.~Moretti and R.~Nevzorov,
+  %``Predictions of the Constrained Exceptional Supersymmetric Standard Model,''
+  Phys.\ Lett.\ B {\bf 681}, 448 (2009)
+  [arXiv:0901.1192 [hep-ph]].
+  %%CITATION = ARXIV:0901.1192;%%
+  %37 citations counted in INSPIRE as of 09 Jun 2014
+
+
 %\cite{Athron:2009bs}
 \bibitem{Athron:2009bs}
   P.~Athron, S.~F.~King, D.~J.~Miller, S.~Moretti and R.~Nevzorov,
@@ -3678,6 +3827,27 @@ Large Muon- and electron-Number Nonconservation in Supergravity Theories,}
   %%CITATION = ARXIV:0904.2169;%%
   %45 citations counted in INSPIRE as of 03 Jun 2014
 
+
+
+%\cite{Athron:2011wu}
+\bibitem{Athron:2011wu} 
+  P.~Athron, S.~F.~King, D.~J.~Miller, S.~Moretti and R.~Nevzorov,
+  %``LHC Signatures of the Constrained Exceptional Supersymmetric Standard Model,''
+  Phys.\ Rev.\ D {\bf 84}, 055006 (2011)
+  [arXiv:1102.4363 [hep-ph]].
+  %%CITATION = ARXIV:1102.4363;%%
+  %25 citations counted in INSPIRE as of 09 Jun 2014
+
+  
+%\cite{Athron:2012sq}
+\bibitem{Athron:2012sq} 
+  P.~Athron, S.~F.~King, D.~J.~Miller, S.~Moretti and R.~Nevzorov,
+  %``Constrained Exceptional Supersymmetric Standard Model with a Higgs Near 125 GeV,''
+  Phys.\ Rev.\ D {\bf 86}, 095003 (2012)
+  [arXiv:1206.5028 [hep-ph]].
+  %%CITATION = ARXIV:1206.5028;%%
+  %21 citations counted in INSPIRE as of 09 Jun 2014
+
 %\cite{Athron:2012pw}
 \bibitem{Athron:2012pw}
   P.~Athron, D.~Stockinger and A.~Voigt,
@@ -3686,6 +3856,15 @@ Large Muon- and electron-Number Nonconservation in Supergravity Theories,}
   [arXiv:1209.1470 [hep-ph]].
   %%CITATION = ARXIV:1209.1470;%%
   %5 citations counted in INSPIRE as of 03 Jun 2014
+
+  %\cite{Athron:2013ipa}
+\bibitem{Athron:2013ipa} 
+  P.~Athron, M.~Binjonaid and S.~F.~King,
+  %``Fine Tuning in the Constrained Exceptional Supersymmetric Standard Model,''
+  Phys.\ Rev.\ D {\bf 87}, no. 11, 115023 (2013)
+  [arXiv:1302.5291 [hep-ph]].
+  %%CITATION = ARXIV:1302.5291;%%
+  %10 citations counted in INSPIRE as of 09 Jun 2014
 
 \end{thebibliography}
 \end{document}
